--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <div class="polaroid-strip">
   <div class="polaroid p1"><img src="img1.jpg"></div>
-  <div class="polaroid p2"><img src="img2.jpg"></div>
+  <div class="polaroid p2"><img src="img2.jpg?v=2"></div>
   <div class="polaroid p3"><img src="img3.jpg"></div>
 </div>
 
