--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Valentine</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Valentine</title>
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<div class="background"></div>
+<div class="kisses"></div>
 
-<section class="envelope-section">
+<div class="envelope-wrapper">
   <div class="envelope" id="envelope">
     <div class="flap"></div>
     <div class="body"></div>
     <div class="seal" id="seal">Press</div>
   </div>
-</section>
+</div>
 
-<section class="letter-section hidden" id="letterSection">
-  <div class="letter">
-    <h1>Happy Valentine’s Day</h1>
-    <p id="typedText"></p>
-  </div>
-</section>
+<div class="letter hidden" id="letter">
+  <h1>Happy Valentine’s Day</h1>
+  <p id="text"></p>
+</div>
 
-<section class="film-section hidden" id="filmSection">
-  <div class="film-strip">
-    <img src="img1.jpg">
-    <img src="img2.jpg">
-    <img src="img3.jpg">
-  </div>
-</section>
+<div class="film hidden" id="film">
+  <img src="img1.jpg">
+  <img src="img2.jpg">
+  <img src="img3.jpg">
+</div>
 
 <script src="script.js"></script>
 </body>
