--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
 <title>For Mayank ❤️</title>
@@ -10,20 +10,25 @@
 
 <div class="kisses"></div>
 
-<div class="envelope-wrapper">
-  <div class="envelope" id="envelope">
+<!-- ENVELOPE -->
+<div class="envelope-container" id="envelopeBox">
+  <div class="envelope">
     <div class="flap"></div>
-    <div class="body"></div>
-    <div class="seal" id="openBtn">Press</div>
+    <div class="back"></div>
+    <div class="seal" id="openBtn">PRESS</div>
   </div>
 </div>
 
-<div class="letter" id="letter">
-  <h1 id="title"></h1>
-  <p id="text"></p>
+<!-- SCROLL -->
+<div class="scroll" id="scroll">
+  <div class="paper">
+    <h1 id="title"></h1>
+    <p id="text"></p>
+  </div>
 </div>
 
-<div class="film-strip" id="film">
+<!-- FILM -->
+<div class="film" id="film">
   <img src="img1.jpg">
   <img src="img2.jpg">
   <img src="img3.jpg">
