--- a/index.html
+++ b/index.html
@@ -63,5 +63,12 @@
 
 <script src="script.js"></script>
 
+  <p class="signature">
+No matter where life takes us, you’ll always have a piece of my heart.
+<br><br>
+Love,<br>
+Sachi
+</p>
+
 </body>
 </html>
