--- a/index.html
+++ b/index.html
@@ -9,165 +9,147 @@
 
 <style>
 
-body {
-  margin: 0;
-  font-family: 'Playfair Display', serif;
-  background: #7b0f14;
-  overflow-x: hidden;
-  text-align: center;
-  color: black;
+body{
+  margin:0;
+  font-family:'Playfair Display',serif;
+  background:#7b0f14;
+  overflow-x:hidden;
+  text-align:center;
 }
 
 /* FLOATING KISSES */
-.kiss {
-  position: fixed;
-  width: 25px;
-  animation: float 15s linear infinite;
-  opacity: 0.7;
-  z-index: 1;
+.kiss{
+  position:fixed;
+  font-size:22px;
+  animation:float 12s linear infinite;
+  opacity:0.8;
+  z-index:1;
 }
 
-@keyframes float {
-  0% { transform: translateY(100vh) rotate(0deg); }
-  100% { transform: translateY(-100vh) rotate(360deg); }
+@keyframes float{
+  from{transform:translateY(100vh);}
+  to{transform:translateY(-100vh);}
 }
 
 /* ENVELOPE */
-
-.envelope-wrapper {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.envelope-wrapper{
+  height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
 }
 
-.envelope {
-  position: relative;
-  width: 500px;
-  height: 320px;
-  background: linear-gradient(#c4161c, #a50f15);
-  border-radius: 8px;
-  cursor: pointer;
-  transition: transform 1s ease, opacity 1s ease;
+.envelope{
+  width:520px;
+  height:330px;
+  background:linear-gradient(#c4161c,#a50f15);
+  position:relative;
+  border-radius:8px;
+  cursor:pointer;
 }
 
-.flap {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 50%;
-  background: linear-gradient(#e01b22, #b31217);
-  clip-path: polygon(0 0, 100% 0, 50% 100%);
-  transform-origin: top;
-  transition: transform 1s ease;
+.flap{
+  position:absolute;
+  top:0;
+  width:100%;
+  height:50%;
+  background:#e01b22;
+  clip-path:polygon(0 0,100% 0,50% 100%);
+  transform-origin:top;
+  transition:1s;
 }
 
-.wax {
-  position: absolute;
-  width: 90px;
-  height: 90px;
-  background: url('wax-seal.png') center/contain no-repeat;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.wax{
+  width:90px;
+  height:90px;
+  background:url("wax-seal.png") center/contain no-repeat;
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
 }
 
-.open .flap {
-  transform: rotateX(180deg);
+.open .flap{
+  transform:rotateX(180deg);
 }
 
-.open {
-  transform: scale(0.9);
-  opacity: 0;
+.open{
+  opacity:0;
+  transition:1s;
 }
 
 /* LETTER */
-
-.letter-section {
-  display: none;
-  padding-top: 60px;
+.letter-section{
+  display:none;
+  padding-top:60px;
 }
 
-.letter {
-  background: url('torn-paper.png') center/cover no-repeat;
-  max-width: 700px;
-  margin: 0 auto;
-  padding: 100px 60px;
-  box-shadow: 0 0 40px rgba(255,255,255,0.2);
+.letter{
+  background:url("torn-paper.png") center/cover no-repeat;
+  max-width:700px;
+  margin:auto;
+  padding:90px 60px;
+  max-height:75vh;
+  overflow-y:auto;
+  box-shadow:0 0 40px rgba(255,255,255,0.3);
 }
 
-.letter h1 {
-  margin-bottom: 20px;
-}
-
-.letter p {
-  margin-bottom: 18px;
-  line-height: 1.6;
+.type{
+  white-space:pre-line;
+  line-height:1.7;
+  font-size:18px;
 }
 
 /* POLAROIDS */
-
-.polaroids {
-  margin-top: 80px;
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-  flex-wrap: wrap;
+.polaroids{
+  margin-top:70px;
+  display:flex;
+  justify-content:center;
+  gap:40px;
+  flex-wrap:wrap;
 }
 
-.polaroid {
-  background: #f5e6cc;
-  padding: 12px;
-  width: 220px;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.3);
-  transform: rotate(-3deg);
-  transition: transform 0.3s;
+.polaroid{
+  background:#f3e7d0;
+  padding:12px;
+  width:220px;
+  box-shadow:0 10px 20px rgba(0,0,0,0.4);
+  transform:rotate(-3deg);
 }
 
-.polaroid:nth-child(2) {
-  transform: rotate(2deg);
+.polaroid:nth-child(2){transform:rotate(2deg);}
+.polaroid:nth-child(3){transform:rotate(-2deg);}
+
+.polaroid img{
+  width:100%;
 }
 
-.polaroid:nth-child(3) {
-  transform: rotate(-2deg);
-}
-
-.polaroid img {
-  width: 100%;
-  display: block;
-}
-
-.tape {
-  width: 60px;
-  position: relative;
-  top: -15px;
-}
-
-/* CLOSING LINE */
-
-.closing {
-  margin-top: 80px;
-  font-weight: bold;
-  color: white;
-  padding-bottom: 120px;
+/* CLOSING */
+.closing{
+  margin-top:80px;
+  color:white;
+  font-weight:bold;
+  padding-bottom:120px;
 }
 
 </style>
 </head>
+
 <body>
 
 <!-- Floating kisses -->
 <script>
-for (let i = 0; i < 15; i++) {
-  const kiss = document.createElement("img");
-  kiss.src = "lip-sticker.png";
-  kiss.className = "kiss";
-  kiss.style.left = Math.random() * 100 + "vw";
-  kiss.style.animationDuration = (10 + Math.random() * 10) + "s";
-  document.body.appendChild(kiss);
+for(let i=0;i<18;i++){
+  let k=document.createElement("div");
+  k.className="kiss";
+  k.innerHTML="💋";
+  k.style.left=Math.random()*100+"vw";
+  k.style.animationDuration=10+Math.random()*10+"s";
+  document.body.appendChild(k);
 }
 </script>
 
+<!-- Envelope -->
 <div class="envelope-wrapper">
   <div class="envelope" id="envelope">
     <div class="flap"></div>
@@ -175,72 +157,75 @@ for (let i = 0; i < 15; i++) {
   </div>
 </div>
 
+<!-- Letter -->
 <div class="letter-section" id="letterSection">
 
-  <div class="letter">
-    <h1>Mayank,</h1>
+<div class="letter">
+<div id="typedText" class="type"></div>
+</div>
 
-    <p><strong>Happy Valentine's Day, Baby.</strong></p>
+<!-- Photos -->
+<div class="polaroids">
+  <div class="polaroid"><img src="img1.jpg"></div>
+  <div class="polaroid"><img src="img2.jpg"></div>
+  <div class="polaroid"><img src="img3.jpg"></div>
+</div>
 
-    <p>I don’t think you realize how much you mean to me.</p>
-
-    <p>Even though we are going through a lot right now,
-    I just want you to know that whether we are meant to be or not,
-    I love you and I meant it when I said it.</p>
-
-    <p>I really wanted to celebrate Valentine’s this year.
-    I was hoping we could, because we barely get to celebrate
-    any special days together.</p>
-
-    <p>But it seems like the universe had other plans,
-    so I made this little something for you instead.</p>
-
-    <p>I hope you like it, because I’ve been planning this
-    since before we took a break.</p>
-
-    <p>I’m grateful for every laugh, every conversation,
-    and every quiet moment we share.</p>
-
-    <p>I care about you more than I can ever properly put into words. ❤️</p>
-
-  </div>
-
-  <div class="polaroids">
-    <div class="polaroid">
-      <img src="tape.png" class="tape">
-      <img src="img1.jpg">
-    </div>
-
-    <div class="polaroid">
-      <img src="tape.png" class="tape">
-      <img src="img2.jpg">
-    </div>
-
-    <div class="polaroid">
-      <img src="tape.png" class="tape">
-      <img src="img3.jpg">
-    </div>
-  </div>
-
-  <div class="closing">
-    No matter where life takes us, you’ll always have a piece of my heart.<br><br>
-    Love,<br>
-    Sachi
-  </div>
+<div class="closing">
+No matter where life takes us, you’ll always have a piece of my heart.<br><br>
+Love,<br>
+Sachi
+</div>
 
 </div>
 
 <script>
-const envelope = document.getElementById("envelope");
-const letterSection = document.getElementById("letterSection");
+const envelope=document.getElementById("envelope");
+const letterSection=document.getElementById("letterSection");
+const typed=document.getElementById("typedText");
 
-envelope.addEventListener("click", () => {
+const letterText=`Mayank,
+
+Happy Valentine’s Day, Baby.
+
+I don’t think you realize how much you mean to me.
+
+Even though we are going through a lot right now,
+I just want you to know that whether we are meant to be or not,
+I love you and I meant it when I said it.
+
+I really wanted to celebrate Valentine’s this year.
+I was hoping we could, because we barely get to celebrate
+any special days together.
+
+But it seems like the universe had other plans,
+so I made this little something for you instead.
+
+I hope you like it, because I’ve been planning this
+since before we took a break.
+
+I’m grateful for every laugh, every conversation,
+and every quiet moment we share.
+
+I care about you more than I can ever properly put into words. ❤️`;
+
+let i=0;
+
+function typeWriter(){
+  if(i<letterText.length){
+    typed.innerHTML+=letterText.charAt(i);
+    i++;
+    setTimeout(typeWriter,30);
+  }
+}
+
+envelope.addEventListener("click",()=>{
   envelope.classList.add("open");
-  setTimeout(() => {
-    document.querySelector(".envelope-wrapper").style.display = "none";
-    letterSection.style.display = "block";
-    window.scrollTo({ top: 0, behavior: 'smooth' });
-  }, 1000);
+  setTimeout(()=>{
+    document.querySelector(".envelope-wrapper").style.display="none";
+    letterSection.style.display="block";
+    typeWriter();
+  },1000);
 });
 </script>
 
