--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ for(let i=0;i<18;i++){
   <div class="polaroid"><img src="img3.jpg"></div>
 </div>
 
-<div class="closing">
+<div class="closing hidden">
 No matter where life takes us, you’ll always have a piece of my heart.<br><br>
 Love,<br>
 Sachi
